# Masterthesis_Mediator

./: .gitignore  Erster Durchlauf.py  Langchain_intro.ipynb  NL2Plan_ohne_Feedback.ipynb  README.md  Test.ipynb  langgraph.json  pyproject.toml
.ARCHIV/: Mediator_main.ipynb
mediator/: Mediator_main.ipynb
prompts/1_type_extraction/: feedback.txt  main.txt
prompts/2_hierarchy_construction/: feedback.txt  main.txt
prompts/3_action_extraction/: feedback.txt  main.txt
prompts/4_action_construction/: feedback.txt  main.txt  predicate_generation.txt
prompts/5_task_extraction/: feedback.txt  goal_state_main.txt  initial_state_main.txt  main.txt  objects_main.txt
results/mit feedback/: nl2plan_Blocksworld.pddl  test.pddl
results/mit_feedback/09072025-logistics-task1/: state.json
results/mit_feedback/18072025-blocksworld-easy-task/: domain.pddl  problem.pddl  state.json
results/mit_feedback/18072025-blocksworld-hard-task/: domain.pddl  problem.pddl  state.json
results/mit_feedback/18072025-blocksworld-medium-task/: domain.pddl  problem.pddl  state.json
results/mit_feedback/18072025-household-easy-task/: state.json
results/mit_feedback/18072025-household-hard-task/: state.json
results/mit_feedback/18072025-household-medium-task/: domain.pddl  problem.pddl  state.json
results/ohne_feedback/: logistics-problem.pddl  logistics.pddl  result1.json
src/: evalution.py  pddl_parser.py
src/agent/: graph.py  nodes_and_edges.py  pddl_parser_alt.py  states.py  syntax_validator.py  unified_planning_parser.py
utils/: paths.py  pddl_parser.py
(+45 files in other folders)
