[project]
name = "mediator"
version = "0.0.1"
description = "Mediator Agent mit LangGraph"
authors = [
    { name = "Timo-rh" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "pddl>=0.3.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.10",
    "langchain-community>=0.0.13",
    "langchain-anthropic>=0.3.16",
    "anthropic>=0.8.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[tool.setuptools]
packages = ["src"]
package-dir = {"src" = "src"}

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
    "pytest>=8.3.5",
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"